conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: '(' expected but identifier found.
if est face au mur() { recule() }
   ^Conditions:5: error: illegal start of simple expression
	}
        ^